fixed alignment

--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -91,7 +91,7 @@
         border-color: white;
         border-width: 0px;
     }
-    top: 20px;
+    top: 22px;
     right: 20px;
     }
 
